# pytvtools

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  debug_gaps.py  debug_mfi.py  debug_mfi2.py  debug_mfi3.py  debug_mfi4.py  debug_symbol.py  debug_timeframe.py  inspect_bb.py  pyproject.toml  test_mfi_debug.py  test_rsi_midnight.py  test_rsi_pattern.py  test_rsi_positional.py  test_rsi_positional2.py  test_rsitvdata.py
.opencode/skills/indicator-parity/: SKILL.md
.superpowers/sdd/: progress.md  review-1.diff
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/superpowers/plans/: 2026-06-26-pvp-pinescript.md
examples/: add_indicator_read_values.py  basic.py  chart_control.py  collector_demo.py  find_dss.py  get_indicator_data.py  get_pine_source.py  indicator_parity.py  indicator_templates.py  investigate_replay_bars.py  multi_symbol_scan.py  pine_interaction.py  search_and_add_indicator.py  spdr_etfs.py  test_batch_100.py  test_batch_20.py  test_cdp_minimal.py  test_cdp_smoke.py  tvdata_collector_demo.py  tvdata_multi.py  tvdata_ohlcv.py
examples/_output/: .gitignore  tvdata_collection.json  tvdata_collection.parquet
examples/_output/spdr/: spdr_all.json  spdr_all.parquet
pine_indicators/: atr.pine  bbands.pine  dss.pine  ema.pine  macd.pine  mfi.pine  pvp.pine  rsi.pine  sma.pine  srsi.pine  supertrend.pine
plan/: 01-bollinger-bands.md  02-atr.md  03-srsi.md
scripts/: spdr_etfs.py  sync_core.py
src/pytvtools/: __init__.py  _chrome_cli.py  cdp.py  chrome.py  collector.py  indicator_parity.py  indicators.py  mcp_server.py  pine_parity.py  tv.py  tvdata.py  watchlists.py
src/pytvtools_core/: __init__.py  indicators.py
tests/: conftest.py  test_cdp.py  test_chrome.py  test_collector.py  test_indicator_parity.py  test_indicators.py  test_integration.py  test_pine_parity.py  test_tv.py  test_tvdata.py  test_tvdata_collector.py  test_watchlists.py
