[project]
name = "pytvtools"
version = "0.1.0"
description = "Pure Python CDP library for TradingView in Chrome — no Node.js, no MCP server deps."
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "websockets==16.0",
    "pyarrow==24.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.2"]
dev = ["pytest==9.0.3", "pytest-asyncio==1.4.0"]

[project.scripts]
pytvtools-mcp = "pytvtools.mcp_server:main"
pytvtools-chrome = "pytvtools._chrome_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: requires a running Chrome + TradingView tab (docker compose up)",
]

[tool.coverage.run]
source = ["pytvtools"]
branch = true
