[project]
name = "pytvtools"
version = "0.1.0"
description = "CDP library for TradingView in Chrome — no Node.js."
requires-python = ">=3.11"
dependencies = [
    "websockets==16.0",
]

[project.optional-dependencies]
full = ["httpx==0.28.1", "pyarrow==24.0.0"]
mcp = ["mcp>=1.27.2"]
dev = ["pytest==9.0.3", "pytest-asyncio==1.4.0"]
all = ["pytvtools[full,mcp,dev]"]

[project.scripts]
pytvtools-mcp = "pytvtools.mcp_server:main"
pytvtools-chrome = "pytvtools._chrome_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: requires a running Chrome + TradingView tab (docker compose up)",
]

[tool.coverage.run]
source = ["pytvtools"]
branch = true
